feat: Init express with
`$ npm install --save express socket.io`

To start,

`$ node app.js`

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/leedawnn/sock-chat/issues"
   },
-  "homepage": "https://github.com/leedawnn/sock-chat#readme"
+  "homepage": "https://github.com/leedawnn/sock-chat#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^4.2.0"
+  }
 }
